# LMDB-KV-Store

./: .env.docker  .gitignore  Cargo.toml  Dockerfile  README.md  Shuttle.toml  shuttle.toml
.github/workflows/: deploy.yml  dev.yml  main.yml  test.yml
src/: handlers.rs  helper.rs  lib.rs  main.rs  router.rs  search.rs
src/datastore/: mod.rs
tests/: test_services.rs
