[package]
name = "lmdb_kv_store"
version = "0.1.0"
edition = "2021"
authors = ["Cibin <cibin345@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
heed = "0.11.0"
rand = "0.8"
base64 = "0.13"
serde = "1.0.164"
serde_json = "1.0.106"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.4.0", features = [
    "add-extension",
    "auth",
    "compression-full",
    "limit",
    "trace",
] }
tower-layer = "0.3.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
hyper = "0.14.26"
axum-test = "9.1.1"
http = "0.2.9"